--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
 .quote {
   color: red;
-  margin: auto;
+  /* margin: auto; */
   width: 50%;
   border: 3px solid;
-  padding: 10px;
+  /* padding: 10px; */
   float: center;
 }
 
-.rabbit {
+/* .fox {
+  margin: left;
+} */
+
+.Judy {
   margin: auto;
   width: 50%;
   padding: 10px;
   float: right;
 }
 
+.rabbit {
+  display: flex;
+  column-gap: 10px;
+}
+
+.police {
+  display: flex;
+  /* margin-left: 250px; */
+  margin: auto;
+  padding-top: 2em;
+}
+
 .zoo {
   text-decoration-style: bold;
-  margin-bottom: 10px;
 }
 
 .movie {
